--- a/apps/order/templates/core/order.html
+++ b/apps/order/templates/core/order.html
@@ -39,84 +39,22 @@
         <div class="order-form-step1">
            <h1 class="heading">Steg 1</h1>
            <!-- SITES -->
-           <label for="products" class="form-tag-products tag">Velg nettside</label>
+           <label for="products" class="form-tag-products tag" id="productLabel">Velg nettside</label>
            <br>
-           <input type="text" name="products" class="products input" id="products" readonly required oninvalid="this.setCustomValidity('Værsåsnill, velg et produkt')" oninput="this.setCustomValidity('')" onclick="orderProductDropdown()"><div class="product-price" id="productPrice" onclick="orderProductDropdown()">0kr</div><div onclick="orderProductDropdown()" class="arrow-down"><i class="fas fa-angle-down"></i></div>
+           <input type="text" name="products" class="products input" id="products" readonly required oninvalid="this.setCustomValidity('Værsåsnill, velg et produkt')" oninput="this.setCustomValidity('')" onclick="orderProductDropdown()"><div class="product-price" id="productPrice" onclick="orderProductDropdown()">0kr</div><div onclick="orderProductDropdown()" class="arrow-down"><i class="fa-solid fa-caret-down"></i></div>
            <div class="products-dropdown" id="productDropdown">
                <h1 class="dropdown-none" onclick="noneProducts()">---------</h1>
                <div class="choices">
                   <h1 onclick="ecommerce()">Nettbutikk/eCommerce</h1>
                   <h1 onclick="blog()">Blogg</h1>
-                  <h1 onclick="bedrift()">Nettside for bedrifter</h1>
-                  <h1 onclick="personal()">Personslig nettside</h1>
-                  <h1 onclick="custom()">Lag din egen</h1>
                </div>
             </div>
-
-
-
-
-
-
-
-
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
-           <br>
+            <br>
+            <br>
            <!-- HOSTING -->
-           <!-- <label for="hosting" class="form-tag-hosting tag">Vil du ha våres hosting tjeneste?</label> -->
+           <label for="hosting" class="form-tag-hosting tag" id="hostingLabel">Vil du ha våres hosting tjeneste?</label>
            <br>
-           <input type="text" name="hosting" class="hosting input" id="hosting" readonly required oninvalid="this.setCustomValidity('Værsåsnill, velg ja eller nei')" oninput="this.setCustomValidity('')" onclick="orderhostingDropdown()"><div class="hosting-price" id="hostingPrice" onclick="orderhostingDropdown()">0kr</div><div onclick="orderhostingDropdown()" class="arrow-down"><i class="fas fa-angle-down"></i></div>
+           <input type="text" name="hosting" class="hosting input" id="hosting" readonly required oninvalid="this.setCustomValidity('Værsåsnill, velg ja eller nei')" oninput="this.setCustomValidity('')" onclick="orderhostingDropdown()"><div class="hosting-price" id="hostingPrice" onclick="orderhostingDropdown()">0kr</div><div onclick="orderhostingDropdown()" class="arrow-down"><i class="fa-solid fa-caret-down"></i></div>
            <div class="hosting-dropdown" id="hostingDropdown">
               <h1 class="dropdown-none" onclick="noneHosting()">---------</h1>
             <div class="choices">
@@ -124,29 +62,21 @@
                <h1 onclick="nei()">Nei</h1>
              </div>
           </div>
-           <br>
-           <br>
-           <!-- IMAGE -->
-           <!-- <label for="image" class="form-tag-image tag">Har du allerede en logo?</label> -->
-           <br>
-           {{form.image}}
-           <br>
-           <br>
+          <br>
+          <br>
            <!-- COLOR -->
-           <!-- <label for="color" class="form-tag-color tag">Velg en farge som du vil ha med</label> -->
+           <label for="color" class="form-tag-color tag" id="colorLabel" onclick="colorInput()">Velg en farge som du vil ha med</label>
            <br>
-           <div class="color-inputs">
-              <input type="text" name="color_hex" class="color-hex input" id="color_hex" value="#ffff">
-               <div class="or">eller</div>
-              <input type="color" id="color" name="color" class="color input" required oninvalid="this.setCustomValidity('Værsåsnill, velg en farge')" oninput="this.setCustomValidity('')">
-            </div>
-            <br>
-            <br>
+            <input type="text" name="color_hex" class="color-hex input" id="color_hex" onclick="colorInput()">
+
+           <br>
+           <br>
+
             <!-- EXTRA PAGES -->
             <h1 class="info">Alle priser har inkludert en Om oss side og en Kontakt oss side. En ekstra side koster 399kr</h1>
-            <!-- <label for="num_pages" class="form-tag-num_pages tag">Velg antall ekstra sider</label> -->
+            <label for="num_pages" class="form-tag-num_pages tag" id="numPagesLabel">Velg antall ekstra sider</label>
             <br>
-            <input type="number" id="num_pages" name="num_pages" class="input" readonly onclick="orderNumPagesDropdown()"><div class="num-pages-price" id="numPagesPrice" onclick="orderNumPagesDropdown()">0kr</div><div onclick="orderNumPagesDropdown()" class="arrow-down"><i class="fas fa-angle-down"></i></div>
+            <input type="number" id="num_pages" name="num_pages" class="input" readonly onclick="orderNumPagesDropdown()"><div class="num-pages-price" id="numPagesPrice" onclick="orderNumPagesDropdown()">0kr</div><div onclick="orderNumPagesDropdown()" class="arrow-down"><i class="fa-solid fa-caret-down"></i></div>
             <div class="num-pages-dropdown" id="numPagesDropdown">
                   <h1 class="dropdown-none" onclick="noneNumPages()">---------</h1>
                   <div class="choices">
@@ -178,37 +108,17 @@
         <br>
         <div class="order-form-step2">
            <h1 class="heading">Steg 2</h1>
-           <h1 class="info">Fortell oss om erfaringen din med web utvikling, sånn at vi kan utvikle en nettside som er lett å skjønne</h1>
-           <label for="css" class="form-tag-css tag">Har du noe erfaring med CSS?</label>
+           <label for="name" class="form-tag-name tag" id="nameLabel">Navn</label>
            <br>
-           <input type="text" id="css" name="css" class="input" required oninvalid="this.setCustomValidity('Kan ikke være tom')" oninput="this.setCustomValidity('')">
+           <input type="text" id="name" name="name" onclick="orderName()" required oninvalid="this.setCustomValidity('Kan ikke være tom')" oninput="this.setCustomValidity('')">
            <br>
-           <label for="html" class="form-tag-html tag">Har du noe erfaring med HTML?</label>
+           <label for="email" class="form-tag-email tag" id="emailLabel">Epost</label>
            <br>
-           <input type="text" id="html" name="html" class="input" required oninvalid="this.setCustomValidity('Kan ikke være tom')" oninput="this.setCustomValidity('')">
+           <input type="email" id="email" name="email" onclick="orderEmail()" required oninvalid="this.setCustomValidity('Kan ikke være tom')" oninput="this.setCustomValidity('')">
            <br>
-           <label for="javascript" class="form-tag-javascript tag">Har du noe erfaring med JavaScript?</label>
+           <label for="message" class="form-tag-message tag" id="messageLabel">Har du noe å fortelle oss?</label>
            <br>
-           <input type="text" id="javascript" name="javascript" class="input" required oninvalid="this.setCustomValidity('Kan ikke være tom')" oninput="this.setCustomValidity('')">
-           <br>
-           <label for="python_django" class="form-tag-python_django tag">Hva med Python og Django?</label>
-           <br>
-           <input type="text" id="python_django" name="python_django" class="input" required oninvalid="this.setCustomValidity('Kan ikke være tom')" oninput="this.setCustomValidity('')">
-           <br>
-        </div> 
-        <div class="order-form-step3">
-           <h1 class="heading">Steg 3</h1>
-           <label for="name" class="form-tag-name tag">Navn</label>
-           <br>
-           <input type="text" id="name" name="name" required oninvalid="this.setCustomValidity('Kan ikke være tom')" oninput="this.setCustomValidity('')">
-           <br>
-           <label for="email" class="form-tag-email tag">Epost</label>
-           <br>
-           <input type="email" id="email" name="email" required oninvalid="this.setCustomValidity('Kan ikke være tom')" oninput="this.setCustomValidity('')">
-           <br>
-           <label for="message" class="form-tag-message tag">Fortell oss om bedriften din</label>
-           <br>
-           <textarea id="message" name="message"></textarea>
+           <textarea id="message" name="message" onclick="orderMessage()"></textarea>
            <br>
          </div> 
         <div class="form-actions">
