--- a/static/scss/store/order.scss
+++ b/static/scss/store/order.scss
@@ -1,11 +1,19 @@
 $loader: rgb(80, 104, 180);
-$input: #007be0;
+$input: #183B56;
 
 // STANDARD PHONE
 
 // COVER
 .cover{
-  height: 55vh;
+  height: 38vh;
+  .content{
+    .text{
+      text-align: left;
+      .cover-h1{
+        font-size: 38px;
+      }
+    }
+  }
 }  
 .make-order{
     width: 100%;
@@ -38,32 +46,44 @@ $input: #007be0;
                 margin-bottom: 15px;
                 margin-top: 10px;
                 width: 100%;
-                color: black;
+                color: #183B56;
                 font-weight: bold;
                 font-size: 26px;
               }
             }
             .form-tag-products{
               font-size: 15px;
-              color: rgb(48, 71, 146);
+              color: $input;
               background: white;
+              font-weight: 600;
               border-radius: 5px;
               width: max-content;
               padding: 0 2px;
               position: absolute;
               left: 25px;
-              top: 60px;
+              top: 84px;
+              &.click{
+                left: 25px;
+                top: 61px;
+                font-size: 13.7px;
+              }
             }
             .form-tag-hosting{
               font-size: 15px;
-              color: rgb(48, 71, 146);
+              color: $input;
               background: white;
+              font-weight: 600;
               border-radius: 5px;
               width: max-content;
               padding: 0 2px;
               position: absolute;
               left: 25px;
-              top: 149px;
+              top: 185px;
+              &.click{
+                left: 25px;
+                top: 160px;
+                font-size: 13.7px;
+              }
             }
             .form-tag-image{
               font-size: 15px;
@@ -78,87 +98,71 @@ $input: #007be0;
             }
             .form-tag-color{
               font-size: 15px;
-              color: rgb(48, 71, 146);
+              color: $input;
               background: white;
+              font-weight: 600;
               border-radius: 5px;
               width: max-content;
               padding: 0 2px;
               position: absolute;
               left: 25px;
-              top: 357px;
-              z-index: 1;
-            }
-            .color-inputs{
-              display: flex;
-              width: 100%;
-              position: relative;
-              border: 2px solid $input;
-              border-radius: 4px;
-              .or{
-                font-size: 15px;
-                color: rgb(60, 84, 160);
-                width: max-content;
-                padding: 0 2px;
-                align-self: center;
-              }
-              .input{
-                height: 55px;
-                padding-top: 10px;
-                &.color{
-                  padding: 15px 60px 5px 65px;
-                  background: white;
-                  border: none;
-                }  
-                &.color-hex{
-                  border: none;
-                }
+              top: 287px;
+              &.click{
+                left: 25px;
+                top: 262px;
+                font-size: 13.7px;
               }
             }
             .info{
               text-align: left;
-              color: black;
+              color: $input;
               margin-bottom: -5px;
               margin-top: 15px;
-              font-size: 15px;
-              font-family: 'Sniglet', cursive;
+              font-size: 14px;
+              font-weight: 600;
               opacity: 0.8;
               line-height: 130%;
             }
             .form-tag-num_pages{
               font-size: 15px;
-              color: rgb(48, 71, 146);
-              border-radius: 5px;
+              color: $input;
               background: white;
+              font-weight: 600;
+              border-radius: 5px;
               width: max-content;
               padding: 0 2px;
               position: absolute;
               left: 25px;
-              top: 536px;
-              z-index: 1;
+              top: 432px;
+              &.click{
+                left: 25px;
+                top: 408px;
+                font-size: 13.7px;
+              }
             }
             .product-price{
               position: absolute;
               right: 40px;
-              transform: translateY(-38px) translateX(-10px);
+              transform: translateY(-37.3px) translateX(-10px);
               font-size: 14px;
-              color: rgb(60, 84, 160);
-              opacity: 0.7;
+              color: $input;
+              opacity: 0.9;
             }
             .hosting-price{
               position: absolute;
               right: 40px;
-              transform: translateY(-38px) translateX(-10px);
+              transform: translateY(-37.3px) translateX(-10px);
               font-size: 14px;
-              color: rgb(60, 84, 160);
-              opacity: 0.7;
+              color: $input;
+              opacity: 0.9;
             }
             .num-pages-price{
               position: absolute;
               right: 40px;
-              transform: translateY(-32px);
+              transform: translateY(-37.3px) translateX(-10px);
               font-size: 14px;
-              color: rgb(60, 84, 160);
-              opacity: 0.7;
+              color: $input;
+              opacity: 0.9;
             }
             .products-dropdown{
               position: absolute;
@@ -268,13 +272,12 @@ $input: #007be0;
             .arrow-down{
               position: absolute;
               right: 2px;
-              background: $input;
               padding: 12px;
               transform: translateY(-50px);
               border-radius: 0;
               i{
                 font-size: 20px;
-                color: white;
+                color: #183B56;
               }
             }
             .num-pages-extra-pages{
@@ -283,9 +286,9 @@ $input: #007be0;
             }
             .input{
               width: 100%;
-              border: 2px solid $input;
+              border: 1px solid lightgray;
               border-radius: 4px;
-              padding: 12px;
+              padding: 14px;
               outline: none;
               font-size: 15px;   
               background: white;
@@ -314,133 +317,75 @@ $input: #007be0;
                 margin-bottom: 15px;
                 margin-top: 10px;
                 width: 100%;
-                color: black;
-                font-weight: bold;
-                font-size: 26px;
-              }
-            }
-          .info{
-              text-align: left;
-              color: black;
-              margin-bottom: -5px;
-              margin-top: 15px;
-              font-size: 15px;
-              font-family: 'Sniglet', cursive;
-              opacity: 0.8;
-              line-height: 130%;
-            }
-          .form-tag-css{
-            font-size: 15px;
-            color: rgb(48, 71, 146);
-            border-radius: 5px;
-            background: white;
-            width: max-content;
-            padding: 0 2px;
-            position: absolute;
-            left: 25px;
-            top: 93px;
-          }
-          .form-tag-html{
-            font-size: 15px;
-            color: rgb(48, 71, 146);
-            border-radius: 5px;
-            background: white;
-            width: max-content;
-            padding: 0 2px;
-            position: absolute;
-            left: 25px;
-            top: 158px;
-          }
-          .form-tag-javascript{
-            font-size: 15px;
-            color: rgb(48, 71, 146);
-            border-radius: 5px;
-            background: white;
-            width: max-content;
-            padding: 0 2px;
-            position: absolute;
-            left: 25px;
-            top: 223px;
-          }
-          .form-tag-python_django{
-            font-size: 15px;
-            color: rgb(48, 71, 146);
-            border-radius: 5px;
-            background: white;
-            width: max-content;
-            padding: 0 2px;
-            position: absolute;
-            left: 25px;
-            top: 288px;
-          }
-          .input{
-            width: 100%;
-            border: 2px solid $input;
-            border-radius: 4px;
-            padding: 7px;
-            outline: none;
-            font-size: 15px;   
-            background: white;
-          }
-        }  
-          .order-form-step3{
-            position: relative;
-            padding-top: 20px;
-            h1{
-              &.heading{
-                margin-bottom: 15px;
-                margin-top: 10px;
-                width: 100%;
-                font-family: 'Sniglet', cursive;
-                color: black;
+                color: #183B56;
                 font-weight: bold;
                 font-size: 26px;
               }
             }
             .form-tag-name{
               font-size: 15px;
-              color: rgb(48, 71, 146);
-              border-radius: 5px;
+              color: $input;
               background: white;
+              font-weight: 600;
+              border-radius: 5px;
               width: max-content;
               padding: 0 2px;
               position: absolute;
               left: 25px;
-              top: 61px;
+              top: 84px;
+              &.click{
+                left: 25px;
+                top: 61px;
+                font-size: 13.7px;
+              }
             }
             .form-tag-email{
               font-size: 15px;
-              color: rgb(48, 71, 146);
-              border-radius: 5px;
-              background: white;            
-                width: max-content;
+              color: $input;
+              background: white;
+              font-weight: 600;
+              border-radius: 5px;         
+              width: max-content;
               padding: 0 2px;
               position: absolute;
               left: 25px;
-              top: 125px;
+              top: 161px;
+              &.click{
+                left: 25px;
+                top: 135px;
+                font-size: 13.7px;
+              }
             }
             .form-tag-message{
               font-size: 15px;
-              color: rgb(48, 71, 146);
+              color: $input;
+              background: white;
+              font-weight: 600;
               border-radius: 5px;
               background: white;
               width: max-content;
               padding: 0 2px;
               position: absolute;
               left: 25px;
-              top: 190px;
+              top: 235px;
+              &.click{
+                left: 25px;
+                top: 214px;
+                font-size: 13.7px;
+              }
             }
             input{
               width: 100%;
-              border: 2px solid rgb(60, 84, 160);
+              border: 1px solid lightgray;
               border-radius: 4px;
-              padding: 7px;
+              padding: 14px;
               outline: none;
               font-size: 15px;   
+              background: white;
             }
             textarea{
               width: 100%;
-              border: 2px solid rgb(60, 84, 160);
+              border: 1px solid lightgray;              
               border-radius: 4px;
               padding: 3px;
               padding-top: 5px;
@@ -449,27 +394,18 @@ $input: #007be0;
               font-size: 15px;
           }
           }
-        .order-products{
-          width: 150px;
-          padding: 3px;
-        }
-        .order-hosting{
-          width: 150px;
-          padding: 3px;
-        }
         .form-actions{
-          margin-top: 15px;
+          margin-top: 23px;
           button{
             border-radius: 4px;
             width: 200px;
             font-size: 16px;
             padding: 10px;
             transition: all .2s ease-in-out;
-            color: white;
+            color: black;
             outline: none;
-            background: linear-gradient(135deg,#5a7ef5, #607bd3);  
-            box-shadow: 1.5px 3px 2px rgb(60, 84, 160);
-            border: 2px solid transparent;      
+            border: 2px solid black;
+            background: white;      
           }
         }
       }
